force-app/main/default/objects/RouteDelivery__c/RouteDelivery__c.object-meta.xml
<CustomObject>
    <label>路線便情報</label>
    <nameField>
        <displayFormat>RFI-{00000000}</displayFormat>
        <label>路線便情報#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>