force-app/main/default/objects/RouteDelivery__c/fields/AccountCD__c.field-meta.xml
<CustomField>
    <fullName>AccountCD__c</fullName>
    <label>取引先CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>