force-app/main/default/objects/RouteDelivery__c/fields/AccountPhone__c.field-meta.xml
<CustomField>
    <fullName>AccountPhone__c</fullName>
    <label>取引先電話番号</label>
    <type>Phone</type>
</CustomField>