force-app/main/default/objects/RouteDelivery__c/fields/BurdenDepartment__c.field-meta.xml
<CustomField>
    <fullName>BurdenDepartment__c</fullName>
    <label>負担部署</label>
    <length>255</length>
    <type>Text</type>
</CustomField>