force-app/main/default/objects/RouteDelivery__c/fields/DataCategory__c.field-meta.xml
<CustomField>
    <fullName>DataCategory__c</fullName>
    <label>データ区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>