force-app/main/default/objects/RouteDelivery__c/fields/DeliveryCD__c.field-meta.xml
<CustomField>
    <fullName>DeliveryCD__c</fullName>
    <label>配送CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>