force-app/main/default/objects/RouteDelivery__c/fields/DeliveryName__c.field-meta.xml
<CustomField>
    <fullName>DeliveryName__c</fullName>
    <label>配送名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>