force-app/main/default/objects/RouteDelivery__c/fields/DestinationCD__c.field-meta.xml
<CustomField>
    <fullName>DestinationCD__c</fullName>
    <label>届け先CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>