force-app/main/default/objects/RouteDelivery__c/fields/DestinationName__c.field-meta.xml
<CustomField>
    <fullName>DestinationName__c</fullName>
    <label>送付先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>