force-app/main/default/objects/RouteDelivery__c/fields/DistrictPremium__c.field-meta.xml
<CustomField>
    <fullName>DistrictPremium__c</fullName>
    <label>地区割増</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>