force-app/main/default/objects/RouteDelivery__c/fields/InputBy__c.field-meta.xml
<CustomField>
    <fullName>InputBy__c</fullName>
    <label>入力者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>