force-app/main/default/objects/RouteDelivery__c/fields/InvoiceField__c.field-meta.xml
<CustomField>
    <fullName>InvoiceField__c</fullName>
    <label>送り状印字欄</label>
    <length>255</length>
    <type>Text</type>
</CustomField>