force-app/main/default/objects/RouteDelivery__c/fields/LineNumber__c.field-meta.xml
<CustomField>
    <fullName>LineNumber__c</fullName>
    <label>ライン№</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>