force-app/main/default/objects/RouteDelivery__c/fields/OrderHeader__c.field-meta.xml
<CustomField>
    <fullName>OrderHeader__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>注文</label>
    <referenceTo>OrderHeader__c</referenceTo>
    <relationshipLabel>路線便情報</relationshipLabel>
    <relationshipName>RouteDeliveryList</relationshipName>
    <type>Lookup</type>
</CustomField>