force-app/main/default/objects/RouteDelivery__c/fields/ProductCD__c.field-meta.xml
<CustomField>
    <fullName>ProductCD__c</fullName>
    <label>商品CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>