force-app/main/default/objects/RouteDelivery__c/fields/ReceptionDate__c.field-meta.xml
<CustomField>
    <fullName>ReceptionDate__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>受付日時</label>
    <type>Date</type>
</CustomField>