force-app/main/default/objects/RouteDelivery__c/fields/RelayFee__c.field-meta.xml
<CustomField>
    <fullName>RelayFee__c</fullName>
    <label>中継費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>