force-app/main/default/objects/RouteDelivery__c/fields/ReservationSlipNumber__c.field-meta.xml
<CustomField>
    <fullName>ReservationSlipNumber__c</fullName>
    <label>予約伝票番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>