force-app/main/default/objects/RouteDelivery__c/fields/SalesRep__c.field-meta.xml
<CustomField>
    <fullName>SalesRep__c</fullName>
    <label>営業者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>