force-app/main/default/objects/RouteDelivery__c/fields/SalesReservationCategory__c.field-meta.xml
<CustomField>
    <fullName>SalesReservationCategory__c</fullName>
    <label>売上予約区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>