force-app/main/default/objects/RouteDelivery__c/fields/SenderName__c.field-meta.xml
<CustomField>
    <fullName>SenderName__c</fullName>
    <label>送り主名義</label>
    <length>255</length>
    <type>Text</type>
</CustomField>