force-app/main/default/objects/RouteDelivery__c/fields/ShippingAddress1__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddress1__c</fullName>
    <label>送付先住所1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>