force-app/main/default/objects/RouteDelivery__c/fields/ShippingAddress2__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddress2__c</fullName>
    <label>送付先住所2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>