force-app/main/default/objects/RouteDelivery__c/fields/ShippingAddress3__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddress3__c</fullName>
    <label>送付先住所3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>