force-app/main/default/objects/RouteDelivery__c/fields/ShippingArranger__c.field-meta.xml
<CustomField>
    <fullName>ShippingArranger__c</fullName>
    <label>出荷手配者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>