force-app/main/default/objects/RouteDelivery__c/fields/ShippingCD__c.field-meta.xml
<CustomField>
    <fullName>ShippingCD__c</fullName>
    <label>送付先CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>