force-app/main/default/objects/RouteDelivery__c/fields/ShippingDistrictCode__c.field-meta.xml
<CustomField>
    <fullName>ShippingDistrictCode__c</fullName>
    <label>送付先地区コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>