force-app/main/default/objects/RouteDelivery__c/fields/ShippingPhone__c.field-meta.xml
<CustomField>
    <fullName>ShippingPhone__c</fullName>
    <label>送付先電話番号</label>
    <type>Phone</type>
</CustomField>