force-app/main/default/objects/RouteDelivery__c/fields/ShippingPostCode__c.field-meta.xml
<CustomField>
    <fullName>ShippingPostCode__c</fullName>
    <label>送付先郵便番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>