force-app/main/default/objects/RouteDelivery__c/fields/SlipNumber__c.field-meta.xml
<CustomField>
    <fullName>SlipNumber__c</fullName>
    <label>伝票番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>