force-app/main/default/objects/RouteDelivery__c/fields/StockLocationCD__c.field-meta.xml
<CustomField>
    <fullName>StockLocationCD__c</fullName>
    <label>在庫場所ＣＤ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>