force-app/main/default/objects/RouteDelivery__c/fields/StockLocationName__c.field-meta.xml
<CustomField>
    <fullName>StockLocationName__c</fullName>
    <label>在庫場所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>