force-app/main/default/objects/RouteDelivery__c/fields/WeightKG__c.field-meta.xml
<CustomField>
    <fullName>WeightKG__c</fullName>
    <label>重量（Kg）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>